# Ivan-Dimitrov-employees

./: README.md  package.json  pnpm-lock.yaml  rsw.toml  sirma.csv  tailwind.config.cjs  test.csv  tsconfig.json  vite.config.ts
.rsw/: rsw.crates  rsw.err  rsw.info
collection-util/: Cargo.toml
collection-util/src/bindings/: row.rs
docs/: index.html
docs/assets/: collection_util_bg-1727ff71.wasm  collection_util_bg-18d4fa8e.wasm  collection_util_bg-e9cf58d2.wasm  index-092f2478.js  index-1167a0a5.js  index-2cbdad3e.css  index-33753d62.css  index-8067fe78.css  index-99d79126.js  index-ab93d913.css  index-c8bcc8ba.js  index-deafd8b9.js  index-e405e879.js  index-f6b3616b.js
src/: App.tsx  index.css
src/components/: EmployeeTable.tsx  FileUpload.tsx  Spinner.tsx  TableRowLimit.tsx
src/lib/: csvParser.ts  dateParser.ts  longestDaysWorkedUtil.ts  wasmParser.ts
src/types/: employeeRelationship.ts  projectRelationship.ts
wasm/collection-util/: LICENSE_MIT  build
wasm/collection-util/src/: lib.rs  utils.rs
wasm/collection-util/src/bindings/: date_range.rs  irow.rs  link.rs  mod.rs  node.rs
wasm/collection-util/src/collections/: ep_collection.rs  mod.rs
