[package]
name = "collection-util"
version = "0.1.0"
authors = ["Ivan Dimitrov <ivan@ivandimitrov.co.uk>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
ts-rs = "6.2.1"
chrono = { version = "0.4.23", features = ["serde", "wasmbind"] }
web-sys = { version = "0.3.61", features = ["console"] }
serde_derive = "1.0.154"
serde = { version = "1.0.154", features = ["serde_derive", "derive", "rc", "alloc", "unstable"] }
serde-wasm-bindgen = "0.5.0"
js-sys = "0.3.61"
serde_json = "1.0.94"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
